--- a/your_code/main.ipynb
+++ b/your_code/main.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "![](table1.png)\n",
     "\n",
-    "Based on these results, we create a Poisson distribution with the sample mean parameter  = 2.435. Is there any reason to believe that at a .05 level the number of scores is a Poisson variable?",
+    "Based on these results, we create a Poisson distribution with the sample mean parameter  = 2.435. Is there any reason to believe that at a .05 level the number of scores is a Poisson variable?\n",
     "\n",
     "Check [here](https://www.geeksforgeeks.org/how-to-create-a-poisson-probability-mass-function-plot-in-python/) how to create a poisson distribution and how to calculate the expected observations, using the probability mass function (pmf). \n",
     "A Poisson distribution is a discrete probability distribution. It gives the probability of an event happening a certain number of times (k) within a given interval of time or space. The Poisson distribution has only one parameter, λ (lambda), which is the mean number of events."
@@ -17,14 +17,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import scipy.stats as st\n",
+    "from scipy.stats import poisson\n"
    ]
   },
-
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 448\n",
+    "categories = 8\n",
+    "frequency = [35,99,104,110,62,25,10,3]\n",
+    "mean = 2.435"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=191.93184027673232, pvalue=5.85583627060059e-38)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poisson_pmfs = np.array([poisson(mean).pmf(i) for i in range(1,8)])\n",
+    "expected = np.append(poisson_pmfs,1-poisson_pmfs.sum())*total\n",
+    "st.chisquare(frequency,f_exp=expected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# we can reject the null hypothesis"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -37,11 +83,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=10.712198008709638, pvalue=0.013388412365655075, dof=3, expected_freq=array([[24.08421053, 19.91578947],\n",
+       "       [19.70526316, 16.29473684],\n",
+       "       [ 8.21052632,  6.78947368],\n",
+       "       [52.        , 43.        ]]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your answer here"
+    "#your answer here\n",
+    "\n",
+    "sugary_drinks =[[32,12],[14,22],[6,9],[52,43]]\n",
+    "st.chi2_contingency(np.array(sugary_drinks))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# we can say that there is a relation between sugary drinks and physical activity"
    ]
   }
  ],
@@ -61,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
